--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ansi_term = "0.12.1"
 reqwest = { version = "0.11.10", features = ["blocking"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
