--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 ansi_term = "0.12.1"
+clap = { version = "3.1.18", features = ["derive"] }
 reqwest = { version = "0.11.10", features = ["blocking"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
